--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "typescript-action",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "private": true,
-  "description": "TypeScript template action",
+  "description": "Need to run tests in production? Tired of finding your files here when you need them there? Fear not! The QuickSend GitHub Action sends your things when and where you need them.",
   "main": "lib/main.js",
   "scripts": {
     "build": "tsc",
@@ -15,14 +15,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/actions/typescript-action.git"
+    "url": "git+https://github.com/cskwrd/quick-send.git"
   },
   "keywords": [
     "actions",
     "node",
     "setup"
   ],
-  "author": "",
+  "author": "cskwrd",
   "license": "MIT",
   "dependencies": {
     "@actions/core": "^1.10.0"
