--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
   "author": "cskwrd",
   "license": "MIT",
   "dependencies": {
-    "@actions/core": "^1.10.0"
+    "@actions/core": "^1.10.0",
+    "nodemailer": "^6.9.2"
   },
   "devDependencies": {
     "@types/node": "^20.2.3",
+    "@types/nodemailer": "^6.4.8",
     "@typescript-eslint/parser": "^5.59.7",
     "@vercel/ncc": "^0.36.1",
     "eslint": "^8.41.0",
