--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -83,7 +83,7 @@ jobs:
       - name: Start Haraka
         run: |
           sudo systemctl start haraka
-          sleep 3
+          sleep 3 # ensure haraka has time to start before running test
 
       - uses: ./
         with:
@@ -99,6 +99,8 @@ jobs:
         env:
           EMAIL_OUTPUT: /tmp/email.eml
         run: |
+          sleep 3 # ensure haraka has time to process email
+          ls -la /tmp
           if [ ! -e "$EMAIL_OUTPUT" ]; then
             echo "::error ::Cannot find .eml file."
             exit 1
