Update subject line test

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -119,7 +119,7 @@ jobs:
             echo "::error ::Resulting email appears incorrect. (TO)"
             exit 1
           fi
-          if ! grep -q "This is the subject line" "$EMAIL_OUTPUT"; then
+          if ! grep -q "Here is your QuickSend File Transfer" "$EMAIL_OUTPUT"; then
             echo "::error ::Resulting email appears incorrect. (SUBJECT)"
             exit 1
           fi
