--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -88,7 +88,8 @@ jobs:
           echo "world" > ${{ github.workspace }}/transporter-room/sub-dir/world.csv
           sleep 1 # ensure files are written before running test
 
-      - uses: ./
+      - name: Run action logic
+        uses: ./
         with:
           protocol: 'smtp'
           remote-host: '127.1.2.3'
