Shorten action description
The max length is 125 characters, I guess.

--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,5 @@
 name: 'QuickSend File Transfer'
-description: 'Need to run tests in production? Tired of finding your files here when you need them there? Fear not! The QuickSend GitHub Action sends your things when and where you need them.'
+description: 'Need to run tests in production? Fear not! The QuickSend GitHub Action sends your things when and where you need them.'
 author: 'cskwrd'
 inputs:
   protocol:
